[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/phase1_win_overlay.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/screens/step2-screen.png" id="2_tex"]
[ext_resource type="Texture2D" path="res://assets/screens/news.png" id="3_news_tex"]

[node name="Phase1WinOverlay" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="WinScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tex")
expand_mode = 1
stretch_mode = 5

[node name="NewsScreen" type="TextureRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_news_tex")
expand_mode = 1
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

